--- a/global.css
+++ b/global.css
@@ -3,11 +3,18 @@
   --text-highlight-color: #cc9767;
   --foreground-color : #212329;
   --background-color: #cc9767;
-  --portfolio-text-color : white;
-  --portfolio-background-color : #001220;
-  --portfolio-item-text-color : white; 
-  --portfolio-item-background-color : black;
-  --portfolio-highlight-color : #47e37b;
+  --projects-text-color : white;
+  --projects-background-color : #001220;
+  --projects-item-text-color : white; 
+  --projects-item-background-color : black;
+  --projects-highlight-color : #47e37b;
+  --contact-text-color : white;
+  --contact-background-color: #001220;
+  --contact-highlight-color: #c403bf;
+  --blog-text-color : white;
+  --blog-background-color: #001220;
+  --blog-highlight-color: #39b7f2;
+
   font-family: 'Playfair Display', 'serif';
   box-sizing: border-box;
   margin: 0;
@@ -16,7 +23,7 @@
 
 
 html {
-  font-size: min(calc(13px + 0.390625vw), 1rem);
+  font-size: min( 2.3vw, 1rem);
 }
 
 /* Set height and overflow to prevent animations extending page height */
@@ -27,6 +34,36 @@ main {
 
 body{
   background-color: var(--background-color);
+}
+/* global css */
+header {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  background-color: var(--projects-background-color);
+  align-items: center;
+  width: 40%;
+  padding: 10px 20px;
+  margin: auto;
+  position: absolute;
+  left: 30%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.back-home-button {
+  padding : 0.8rem;
+  font-size: 1rem;
+  border: var(--projects-text-color) 8px double;
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: transparent;
+  text-decoration: none;
+  color: var(--projects-text-color);
+}
+
+.back-home-button:hover {
+  filter: brightness(0.7);
 }
 
 /* Animations */
@@ -108,7 +145,7 @@ body{
 }
 /* end of homepage on load animations */
 
-/* Animations triggered by View Portfolio Button, in order of delay*/
+/* Animations triggered by View projects Button, in order of delay*/
 .top-close-animate {
   animation: 0.6s ease-in 0s 1 forwards reverse line-animate;
 }
@@ -127,14 +164,14 @@ body{
   transform-origin: top center;
 }
 
-.portfolio-open-animate{
+.open-animate{
   animation:  0.6s ease-in 1.6s 1 move-page-up;
 }
-/* end of View Portfolio animations */
+/* end of View projects animations */
 
 
 /*Animations triggered by Back Home Buttom, in order of dely*/
-.portfolio-close-animate{
+.close-animate{
   animation:  0.6s ease-in 0s 1 reverse move-page-up;
 }
 
@@ -183,12 +220,11 @@ i,strong{
   position: relative;
   justify-content: center;
   align-items: center;
-  flex-flow: column wrap;
+  flex-direction: column;
 }
 
 #foreground {
   background: var(--foreground-color);
-  gap: 2rem;
 }
 
 #foreground h1{
@@ -206,37 +242,30 @@ i,strong{
   padding: 10px;
 }
 
-#foreground button {
+.homepage-button {
   color: var(--text-color);
   background-color: transparent;
   padding : 0.8rem;
   font-size: 1.2rem;
-  border: var(--text-highlight-color) 8px double;
-  border-radius: 8px;
+  border: var(--text-highlight-color) 0.5rem double;
+  border-radius: 0.4rem;
   cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  min-width: 8rem;
 } 
 
-#foreground section {
+.homepage-button:hover{
+  filter: brightness(0.7);
+}
+
+#foreground nav {
   display: flex;
   justify-content: center;
-  gap : 20px;
+  gap : 2rem;
   align-items: center;
-}
-
-#resume-button {
-  color: var(--text-color);
-  background-color: transparent;
-  padding : 0.8rem;
-  font-size: 1.2rem;
-  border: var(--text-highlight-color) 8px double;
-  border-radius: 8px;
-  cursor: pointer;
-  text-decoration: none;
-  text-align: center;
-}
-
-#view-portfolio-button:hover, #resume-button:hover{
-  filter: brightness(0.7)
+  flex-flow: row;
+  justify-content: space-evenly;
 }
 
 #homepage{
@@ -272,48 +301,21 @@ i,strong{
   border: 0px;
 }
 
-/* Portfolio css */
+/* projects css */
 
-#back-home-button {
-  padding : 0.8rem;
-  font-size: 1rem;
-  border: var(--portfolio-text-color) 8px double;
-  border-radius: 8px;
-  cursor: pointer;
-  background-color: transparent;
-  color: var(--portfolio-text-color);
-}
-
-#back-home-button:hover {
-  filter: brightness(0.8);
-}
-
-#portfolio h2 {
+#projects h2 {
   text-align: center;
   font-size: 2.0rem;
 }
 
-#portfolio header {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  background-color: var(--portfolio-background-color);
-  align-items: center;
-  width: 40%;
-  padding: 10px 20px;
-  margin: auto;
-  position: absolute;
-  left: 30%;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
+
 
 @media screen and (min-width: 750px) {
-  #portfolio {
+  #projects {
     grid-template-rows: 200px 50px 420px;
     grid-template-columns: 1fr 650px 1fr;
   }
-  #portfolio header {
+  #projects header {
     grid-row: 1 / 2;
     grid-column: 1 / 4;
   }
@@ -340,11 +342,11 @@ i,strong{
 }
 
 @media screen and (max-width: 750px) {
-  #portfolio {
+  #projects {
     grid-template-rows: 200px 50px 420px;
     grid-template-columns: 1fr 1fr;
   }
-  #portfolio header {
+  #projects header {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
   }
@@ -370,11 +372,11 @@ i,strong{
   }
 }
 
-#portfolio {
+#projects {
   position: absolute;
   height : 100%;
   width: 100%;
-  color: var(--portfolio-text-color);
+  color: var(--projects-text-color);
   z-index: 0;
   background: url(/assets/green-waves.svg) repeat-x top center;
   background-size: 800px auto;
@@ -391,9 +393,9 @@ i,strong{
 #left-button, #right-button {
   cursor: pointer;
   background-color: transparent;
-  color: var(--portfolio-highlight-color);
+  color: var(--projects-highlight-color);
   border-radius: 50%;
-  border: 4px double var(--portfolio-highlight-color);
+  border: 4px double var(--projects-highlight-color);
   width: 3rem;
   height: 3rem;
   display: flex;
@@ -424,11 +426,11 @@ i,strong{
 }
 
 .selected {
-  background-color: var(--portfolio-highlight-color)!important;
+  background-color: var(--projects-highlight-color)!important;
 }
 
-/* Css for portfolio item within slider */
-portfolio-item {
+/* Css for projects item within slider */
+projects-item {
   position: absolute;
   width: 40%;
   top : 0%;
@@ -472,7 +474,178 @@ portfolio-item {
   transform: translate3d(55%, 0%, -120px )  scale(0.8);
 }
 
+/** contact page css **/
 
+#contact {
+  position: absolute;
+  height : 100%;
+  width: 100%;
+  color: var(--projects-text-color);
+  z-index: 0;
+  background: url(/assets/purple-waves.svg) repeat-x top center;
+  background-size: 800px auto;
+  display: grid;
+}
 
+#contact-content {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: column wrap;
+  margin-top: 200px;
+  gap: 20px;
+}
 
+#contact-content p {
+  text-align: center;
+}
+#contact-content form{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-flow: column wrap;
+  /* border: var(--contact-highlight-color) 3px solid; */
+  /* padding : 12px 20px; */
+  gap: 20px;
+  border-radius: 8px;
+  width: min(65vw, 600px);
+}
 
+#contact-content button{  
+  padding : 0.8rem;
+  font-size: 1rem;
+  border: var(--contact-highlight-color) 8px double;
+  border-radius: 8px;
+  cursor: pointer;
+  min-width: 8rem; 
+  background-color: transparent;
+  color: var(--projects-text-color);
+}
+
+#contact-content button:hover {
+  filter: brightness(0.8);
+}
+#contact-content textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+#contact-content label {
+  display: flex;
+  flex-flow: column;
+  text-decoration: solid underline var(--contact-highlight-color) 1px ;
+  text-underline-offset : 5px;
+  gap: 10px;
+  width : 100%;
+}
+
+#contact-content fieldset{
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 100%;
+  border: none;
+}
+
+#contact-content fieldset label {
+  width: 45%;
+}
+
+#contact-content input{
+  width: 100%;
+  height: 2.3rem;
+  padding: 10px;
+}
+
+/* Blog page css */
+#blog {
+  position: absolute;
+  height : 100%;
+  width: 100%;
+  color: var(--projects-text-color);
+  z-index: 0;
+  background: url(/assets/blue-waves.svg) repeat-x top center;
+  background-size: 800px auto;
+  display: grid;
+}
+
+#blog-content{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  align-content: flex-start;
+  flex-flow: row wrap;
+  margin-top: 200px;
+  margin-left: 70px;
+}
+
+#blog-container {
+  width: min(65vw, 600px);
+}
+
+#blog-container h3 {
+  text-decoration: solid underline var(--blog-highlight-color) 1px ;
+  text-underline-offset : 5px;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  margin-left: 6px;
+}
+
+#blog-posts a {
+  width:100%;
+  background-color: #252b2f;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  padding: 12px 20px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@keyframes underline-animate {
+  from{
+
+  }
+}
+#blog-posts a:hover{
+  text-decoration: solid underline var(--blog-highlight-color) 1px;
+  text-underline-offset: 3px;
+  /* color: var(--blog-highlight-color); */
+  background-color: #323a40;
+}
+
+#reading-list-container{
+  padding-left: 2rem;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  padding-right: 5px;
+}
+
+#reading-list-container h3{
+  text-decoration: solid underline var(--blog-highlight-color) 1px ;
+  text-underline-offset : 5px;
+  font-size: 1.7rem;
+}
+
+#reading-list-container p{
+  font-size: 1rem;
+}
+
+#reading-list-container ol {
+  margin-top: 20px;
+  margin-left: 2rem;
+  font-size: 1rem;
+  max-width: 226px;
+}
+
+#reading-list-container li {
+  margin-bottom: 8px;
+}
