Better background color

--- a/global.css
+++ b/global.css
@@ -2,7 +2,7 @@
   --text-color : #C5C6C7;
   --text-highlight-color: #cc9767;
   --foreground-color : #212329;
-  --background-color: #cc9767;
+  --background-color: #212329;
   --projects-text-color : white;
   --projects-background-color : #001220;
   --projects-item-text-color : white; 
